2008-05-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Reorganize the final summary and add bold titles to
	make the output more readable.

2008-05-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Import of the new compression layer.

	* configure.ac: Always check for Zlib, not only when the compat layer
	is enabled. Print a summary of supported engines for both TLS and
	compression.

	* src/core/exmpp_compress.erl, c_src/exmpp_compress_zlib.c,
	src/Makefile.am, src/Emakefile.in, c_src/Makefile.am,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add
	exmpp_compress and its associated port driver.

	* src/core/exmpp_tls.erl: Fixed some issues with documentation.

	* src/core/exmpp_tls.erl, src/core/exmpp_compress.erl: Fix start/0 and
	start_link/0 return values.

	* c_src/exmpp_compress_zlib.c: Free Z streams when the driver is
	stopped.

	* src/core/exmpp_sup.erl: Remove start/0 because supervisor:start/3
	never existed. Start exmpp_compress.

2008-05-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Import of the new TLS layer.

	* configure.ac: Always check for OpenSSL, not only when the compat
	layer is enabled.

	* src/core/exmpp_tls.erl, c_src/exmpp_tls_openssl.c, src/Makefile.am,
	src/Emakefile.in, c_src/Makefile.am, ebin/Makefile.am,
	ebin/exmpp.app.in, doc/Makefile.am: Add exmpp_tls and its associated
	port driver.

	* src/core/exmpp_tls.erl, c_src/exmpp_tls_openssl.c: Add
	controlling_process/2 and close/1 functions. Allow the underlying
	socket to return data as lists. Allow the caller to send data as list;
	the receive part is done but the option isn't available yet. Fix
	handshake for the client side. When the handshake fails, the port
	driver now returns the reason string provided by OpenSSL. Until a real
	verify_callback is made, any certificate is accepted.

	* src/core/exmpp_tls.erl: Add basic documentation. Fix $Id$ tag.
	(recv/3): Add real timeout support.

	* src/core/exmpp_sup.erl: Start exmpp_tls.